# python-poetry-library-starter

./: .gitignore  .releaserc.json  CHANGELOG.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-test-release.yml
tests/: test_python_poetry_library_starter.py
