[tool.poetry]
name = "python-poetry-library-starter"
version = "1.1.0"
description = ""
authors = ["harsh8398 <pharsh58@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.12b0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/legacy/"
secondary = true